--- a/src/components/home/ChooseUs.css
+++ b/src/components/home/ChooseUs.css
@@ -3,6 +3,7 @@
   background: #fff;
   padding: 40px 0 60px; 
   margin-top: -60px; 
+
 }
 
 
@@ -53,8 +54,8 @@
 
 /* headings */
 .why-title {
-  font-size: 24px;
-  font-weight: 600;
+  font-size: 1.3rem;
+  font-weight: 500;
   margin-bottom: 20px;
   color: #000;
   text-transform: uppercase;
@@ -63,7 +64,7 @@
 
 /* paragraph text */
 .why-text {
-  font-size: 18px;
+  font-size: 1.1rem;
   color: #111;
   line-height: 1.75;
   max-width: 90%;
