--- a/src/components/home/Testimonials.css
+++ b/src/components/home/Testimonials.css
@@ -7,6 +7,15 @@
    margin-bottom:-40px; */
 }
 
+.testimonials-left .testimonials-title {
+  font-size: 1.6rem;
+} 
+
+testimonials-left .testimonials-quote {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
 .testimonials-wrapper {
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -24,14 +33,14 @@
 }
 
 .testimonials-title {
-  font-size: 42px;
-  font-weight: 800;
+  font-size: 1.5rem;
+  font-weight: 500;
   color: #004080;
   margin-bottom: 25px;
 }
 
 .testimonials-quote {
-  font-size: 18px;
+  font-size: 1rem;
   line-height: 1.7;
   color: #000;
   font-weight: 500;
@@ -67,17 +76,22 @@
 
 .testimonial-card h3 {
   color: #caa600;
-  font-size: 20px;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 500;
   margin-bottom: 15px;
 }
 
 .testimonial-card p {
   color: #000;
-  font-size: 17px;
-  line-height: 1.6;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
+.testimonial-card span {
+  font-size: 1.2rem;
+  font-weight: 200;
+}
+  
 /* Swiper pagination */
 .swiper-pagination {
   margin-top: 30px;
