--- a/src/components/home/WorkPlatforms.css
+++ b/src/components/home/WorkPlatforms.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
    /* margin-bottom: -50px; */
+   
 }
 
 /*  MAIN BOX  */
@@ -14,13 +15,13 @@
   border-radius: 8px;
   padding: 50px 60px;
   width: 90%;
-  max-width: 1200px;
+  max-width: 1100px;
   text-align: center;
 }
 
 /*  TITLE INSIDE BOX  */
 .work-platform-title {
-  font-size: 40px;
+  font-size: 2rem;
   font-weight: 600;
   color: #000;
   margin-bottom: 40px;
@@ -56,7 +57,7 @@
 }
 
 .work-platform-logos img {
-  width: 200px;
+  width: 190px;
   height: auto;
   object-fit: contain;
   transition: transform 0.3s ease;
@@ -69,7 +70,7 @@
 /* DIVIDER */
 .divider {
   width: 1px;
-  height: 220px;
+  height: 230px;
   align-self: center;
   background-color: #000;
 }
@@ -78,7 +79,8 @@
 .work-platform-text {
   flex: 1;
   text-align: left;
-  font-size: 20px;
+  font-size: 1.2rem;
+  font-weight: 400;
   color: #000;
   line-height: 1.6;
 }
@@ -98,7 +100,7 @@
 }
 
 /* RESPONSIVE DESIGN  */
-@media (max-width: 1024px) {
+@media (max-width: 1280px) {
   .work-platform-box {
     padding: 50px 40px;
   }
@@ -145,7 +147,14 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 576px) {
+
+   
+.work-platform-section {
+   margin-top: 10px;
+}
+
+
   .work-platform-title {
     font-size: 28px;
     margin-bottom: 30px;
@@ -162,4 +171,15 @@
   .work-platform-text {
     font-size: 15px;
   }
+}
+
+@media (min-width: 768px) and (max-width: 1000px) {
+  .work-platform-section {
+    padding-bottom: 10px;
+    margin-top: -40px;
+  }
+}
+
+.work-platform-logos img {
+  width: 190px;  /* was 190px */
 }
