--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,11 +1,10 @@
 .paraAbout {
   text-align: center;
   color: #8a8a8a;
-  font-family: "Outfit", sans-serif;
-  font-size: 21px;
-  line-height: 1.5;
+  font-size: 1.5rem;
+  line-height: 1.6;
   letter-spacing: 0.01em;
-  margin: 0 auto;
+  margin: 20px auto;
   font-weight: 400;
 }
 @media (max-width: 480px) {
@@ -13,6 +12,7 @@
     font-size: 16\8px; /* smaller font size on mobile */
   }
 }
+
 .backcol1_color {
   background-color: #FFC422;
   color: black;
@@ -65,6 +65,7 @@
   font-weight: 700 !important;
   gap: 20px;
 }
+
 
 .about_card_para {
   display: flex;
@@ -245,16 +246,19 @@
 
 .aboutus_name {
   font-weight: 400;
+  font-size: 1.6rem;
+  justify-content: center;
+  text-align: center;
 }
 
 .background_color_aboutus_name {
-  padding: 5px;
+  padding: 4px;
   background-color: #FFC422;
-  border-radius: 10px;
+  border-radius: 8px;
   text-align: center;
-  width: 160px;
-  font-family: "Outfit", sans-serif;
-
+  width: 140px;
+  justify-content: center;
+  padding-bottom: 1px;
 }
 
 
@@ -299,15 +303,15 @@
 }
 
 .number {
-  font-size: 30px;
-  font-weight: 700;
+  font-size: 28px;
+  font-weight: 600;
   color: #142382;
   margin-bottom: -4px;
 }
 
 .label {
-  font-size: 30px;
-  font-weight: 600;
+  font-size: 26px;
+  font-weight: 500;
   color: #142382;
 }
 .aboutimgs{
