--- a/src/css/vission.css
+++ b/src/css/vission.css
@@ -14,7 +14,7 @@
     align-items: center;
     color: #8a8a8a;
     font-family: "Outfit", sans-serif !important;
-    font-size: 20px !important;
+    font-size: 1.2rem!important;
     line-height: 1.5;
     letter-spacing: 0.01em;
     margin: 0 auto;
@@ -47,7 +47,7 @@
     align-items: center;
     color: #8a8a8a;
     font-family: "Outfit", sans-serif !important;
-    font-size: 20px !important;
+    font-size: 1.2rem!important;
     line-height: 1.5;
     letter-spacing: 0.01em;
     margin: 0 auto;
@@ -57,7 +57,7 @@
 }
 
 .vision-image {
-    max-width: 180px;
+    max-width: 160px;
     height: auto;
     object-fit: contain;
 }
@@ -114,9 +114,9 @@
 .card_name {
     color: #0D1678;
     font-family: "Outfit", sans-serif !important;
-    font-size: 40px;
-    font-weight: 600;
-    margin: 0px 0px 0px 0px !important;
+    font-size: 2.1rem;
+    font-weight: 500;
+    margin: 0px 0px 10px 0px !important;
 }
 
 .mission_name {
