--- a/src/components/contactus/ContactSection.css
+++ b/src/components/contactus/ContactSection.css
@@ -52,15 +52,18 @@
   background: #004aad;
   color: #fff;
   border: none;
-  padding: 5px 15px;
-  border-radius: 5px;
-  font-weight: 500;
+  padding: 8px 25px;
+  border-radius: 30px;
+  font-weight: 600;
+
   cursor: pointer;
   transition: 0.3s ease;
   text-align: right;
   justify-content:flex-end;
-  margin-left: auto;
+  margin-left:320px;
   display: block;
+  /* margin-top: -10px; */
+  margin-bottom: 5px;
 
 }
 
